[package]
name = "zaun"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
solana-client = "2.0.10"
solana-sdk = "2.0.10"
solana-account-decoder = "2.0.10"
solana-transaction-status = "2.0.10"
spl-associated-token-account = "6.0.0"
spl-token = "6.0.0"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = {version = "0.23.1" , features = ["native-tls"]}
tokio-util = "0.7.12"
url = "2.5.2"
rand = "0.8.5"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
futures = "0.3.30"
futures-util = "0.3.30"
reqwest = { version = "0.12.4", features = ["json", "multipart", "socks" ,"rustls-tls"] }
bytemuck = { version = "1.16.3", features = ["derive"] }
borsh = "1.5.1"
chrono = "0.4.38"
colored = "2.1.0"
regex = "1.10.6"
crossterm = "0.28.1"
tonic = "0.12.3"
tui = "0.19"
arboard = "3.4.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
artem = "3.0.0"
image = "0.25.5"
blake3 = {version = "1.5.5", features=["pure"]}
which = "7.0.1"
open = "5"
hex = "0.4"


[build-dependencies]
winres = "0.1.12"



# Optional custom profiles
[profile.dev]
# Development profile settings
opt-level = 0                # No optimization (fast compile time)
debug = true                 # Include debug symbols
overflow-checks = true       # Enable overflow checks
panic = "unwind"             # Enable unwinding on panic

[profile.release]
# Release profile settings
opt-level = 3                # Maximum optimization for production
debug = false                # Disable debug symbols
overflow-checks = false      # Disable overflow checks
panic = "abort"              # Abort on panic to avoid unwinding overhead
lto = true                   # Enable Link Time Optimization for smaller binaries


[features]
check_timestamp = []

